2004-09-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/lilypond-book.py (ext2format): Add latex as Latex.

2004-10-01  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/notation.itely: more small fixes.

	* Documentation/user/examples.itely: make new sections.

	* input/test/bar-lines.ly: improve output, fix bug.

	* Documentation/user/changing-defaults.itely: small fixes.

2004-10-01  Werner Lemberg  <wl@gnu.org>

	* tex/lilyponddefs.tex (\lilypondECencoding): New command to handle
	T1 encoding in texinfo mode.
	(\lilypondstart): Use it.
	(\lilypondloop, \lilyponditerate): Removed.  Unused.

2004-09-30  Werner Lemberg  <wl@gnu.org>

	* tex/lilyponddefs.tex (\lilypondstart): Define
	\lilypondfontencoding for both texinfo and latex mode.

	* scm/framework-tex.scm (font-load-command): Use
	\lilypondfontencoding.

2004-09-30  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/framework-tex.scm (dump-page): take with-extents?
	argument. If true, output Y extents. Used for lilypond-book
	documents.

	* scripts/lilypond-book.py (PREAMBLE_LY): set dump-extents for
	\bookpaper.

	* lily/slur.cc (outside_slur_callback): epsilon-delta management
	for slur edges.
 
	* scm/framework-tex.scm (dump-page): put stencil height in dumped
	page.

2004-09-29  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/notation.itely (Multi measure rests):
	Improved example.

2004-09-29  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/auto-beam-engraver.cc (test_moment): robustify.

2004-09-28  Werner Lemberg  <wl@gnu.org>

	* scm/framework-tex.scm (font-load-command): Define proper font
	macro which sets font encoding if available.
	(define-fonts): Define \lilypondpaperinputencoding, to be taken
	from the \bookpaper block.

	* tex/lilyponddefs.tex (\lilypondstart): Use
	\lilypondpaperinputencoding for global input encoding.

2004-09-28  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/score.cc (Score): oops. Copy error_found_ too.
