@@ -1,3 +1,8 @@
+2004-10-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/slur.cc (outside_slur_callback): try three sample points
+	for determining collisions. This fixes: slur-script.ly.
+
 2004-09-30  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* scripts/lilypond-book.py (ext2format): Add latex as Latex.
